tag: 0.1.1. fix html

--- a/13378-h/13378-h.htm
+++ b/13378-h/13378-h.htm
@@ -65,38 +65,38 @@ Distributed Proofreading Team
 </pre>
 
     <h1>HENDRIK CONSCIENCE</h1>
-    <br />
-    <br />
+    <br>
+    <br>
     <h1><i>DE BAANWACHTER</i></h1>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <center>
-      <img src="images/titelpagina.jpg" alt="Titelpagina" width="300" />
-      <hr style="width: 65%;" />
-      <br />
-      <br />
+      <img src="images/titelpagina.jpg" alt="Titelpagina" width="300" >
+      <hr style='width: 65%;' >
+      <br>
+      <br>
 
       <h2>INHOUDSOPGAVE</h2>
-      <a href="#DE_BAANWACHTER"><b>DE BAANWACHTER</b></a><br />
-       <a href="#I"><b>I</b></a><br />
-       <a href="#II"><b>II</b></a><br />
-       <a href="#III"><b>III</b></a><br />
-       <a href="#IV"><b>IV</b></a><br />
-       <a href="#V"><b>V</b></a><br />
-       <a href="#SLOT"><b>SLOT</b></a><br />
-      <br />
+      <a href="#DE_BAANWACHTER"><b>DE BAANWACHTER</b></a><br>
+       <a href="#I"><b>I</b></a><br>
+       <a href="#II"><b>II</b></a><br>
+       <a href="#III"><b>III</b></a><br>
+       <a href="#IV"><b>IV</b></a><br>
+       <a href="#V"><b>V</b></a><br>
+       <a href="#SLOT"><b>SLOT</b></a><br>
+      <br>
 
-      <hr style="width: 65%;" />
+      <hr style='width: 65%;' >
       <img src="images/illustratie3.jpg" width="400"
-      alt="De notaris! Barmhartige God het is de notaris!" /><br />
+      alt="De notaris! Barmhartige God het is de notaris!" ><br>
        <i>De notaris! Barmhartige God het is de notaris!</i>
     </center>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="DE_BAANWACHTER" name="DE_BAANWACHTER"></a>
     <h2>DE BAANWACHTER</h2>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="I" name="I"></a>
     <h2>I</h2>
-    <br />
+    <br>
 
     <p>Wat ik ga vertellen, is voorgevallen&mdash;nu ongeveer twintig jaren
     geleden&mdash;in de nabijheid eener Vlaamsche gemeente, die ik met den
@@ -656,10 +656,10 @@ Distributed Proofreading Team
     misschien, zich zelven martelen en den slaap der kinderen storen.</p>
     <p>Met dit besluit doofde hij zijne lantaarn uit en beklom den trap van den
     waggon.</p>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="II" name="II"></a>
     <h2>II</h2>
-    <br />
+    <br>
 
     <p>Des anderendaags, bij het eerste licht der rijzende zon, waren de baanwachter en
     zijne vrouw in den waggon gezeten en hielden roerloos en zwijgend het hoofd op de
@@ -878,15 +878,15 @@ Distributed Proofreading Team
     <p>Terwijl hij dus in zich zelven smartelijk morrende voortstapte, kwamen eenige
     onduidelijke klanken zijn oor treffen. Hij verbleekte, slaakte eenen doffen kreet en
     bleef staan, zonder zich echter te durven omkeeren.</p>
-    <br />
+    <br>
 
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <center>
       <img src="images/illustratie49.jpg" width="400"
-      alt="Jan Verhelst zat geknield bij zijne blinde moeder." /><br />
+      alt="Jan Verhelst zat geknield bij zijne blinde moeder." ><br>
        <i>Jan Verhelst zat geknield bij zijne blinde moeder.</i>
     </center>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <p>"Welnu, wat gebeurt u, kameraad?" vroegen de gendarmes verwonderd. "Het zijn de
     dorpelingen, die immer uit de verte tegen u schreeuwen. Vooruit, vooruit, of zij
     halen ons nog in!"</p>
@@ -1037,10 +1037,10 @@ Distributed Proofreading Team
     <p>Eenige oogenblikken later krijschten de grendels eener cel achter zijnen rug, en
     hij viel weenend neder op de houten bank.</p>
     <p>Alleen, hij was alleen met zijne schaamte en zijne wanhoop!</p>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="III" name="III"></a>
     <h2>III</h2>
-    <br />
+    <br>
 
     <p>Reeds zeven dagen zat de baanwachter in de nauwe cel der gevangenis opgesloten.
     Hij wist niets aangaande het lot zijner vrouw en kinderen of aangaande den toestand
@@ -1191,10 +1191,10 @@ Distributed Proofreading Team
     van uw huisgezin bekomen."</p>
     <p>De sleuteldrager sloot de cel toe, en de substituut verliet de gevangenis met ware
     deernis in het hart.</p>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="IV" name="IV"></a>
     <h2>IV</h2>
-    <br />
+    <br>
 
     <p>Dienzelfden voormiddag verliet een ongelukkig huisgezin het dorp van
     Bolderhout.</p>
@@ -1564,15 +1564,15 @@ Distributed Proofreading Team
     <p>"Welnu, hoe is de toestand uws vaders?" vroeg hij, toen hij hem genaderd was.</p>
     <p>"Goed, goed," kreeg hij ten antwoord, "mijn vader is bij zijn verstand!"</p>
     <p>"En hebt gij hem niet van het ongeluk gesproken?"</p>
-    <br />
+    <br>
 
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <center>
       <img src="images/illustratie91.jpg" width="400"
-      alt="Hield hem in den benedengang staan, greep zijne hand." /><br />
+      alt="Hield hem in den benedengang staan, greep zijne hand." ><br>
        <i>Hield hem in den benedengang staan, greep zijne hand.</i>
-    </center
-    <hr style="width: 65%;" />
+    </center>
+    <hr style='width: 65%;' >
     <p>"Neen, wij durfden niet; het mocht hem te zeer ontstellen, indien wij hem den
     schrikkelijken dood van den koetsier bekend maakten."</p>
     <p>"Maar dien hoeft men hem niet te melden."</p>
@@ -1712,10 +1712,10 @@ Distributed Proofreading Team
     <p>"Ha, ha, het zal er stuiven, morgen!" juichte da hovenier. "Hoera, hoera, leve Jan
     Verhelst!"</p>
     <p>En met de handen in de lucht wemelende, liep hij vol blijdschap het dorp in.</p>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="V" name="V"></a>
     <h2>V</h2>
-    <br />
+    <br>
 
     <p>Het was wel elf uren in den morgen, als Mie-Wanna met de blinde grootmoeder en met
     de kinderen de stad bereikte.</p>
@@ -1929,15 +1929,15 @@ Distributed Proofreading Team
     weder!"</p>
     <p>De baanwachter en zijne vrouw bekeken hem met ongeloof; maar zij beefden en waren
     bleek van angstige afwachting.</p>
-    <br />
+    <br>
 
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <center>
       <img src="images/illustratie113.jpg" width="400"
-      alt="Leve Sander! Leve Sander! hoera! hoera!" /><br />
+      alt="Leve Sander! Leve Sander! hoera! hoera!" ><br>
        <i>Leve Sander! Leve Sander! hoera! hoera!</i>
-    </center
-    <hr style="width: 65%;" />
+    </center>
+    <hr style='width: 65%;' >
     <p>"Mijn vader zal genezen," hernam Frederic. "Hij heeft gesproken en uwe onschuld
     verklaard. Onze koetsier had tegen mijns vaders wil de barreelen geopend. Nu is de
     heer substituut naar den rechter om een bevel van vrijstelling voor u te bekomen.
@@ -2023,10 +2023,10 @@ Distributed Proofreading Team
     <p>"Vrij, ik ben vrij! hoera! hoera!"</p>
     <p>"Hoera, hoera! Vader is vrij!" herhaalden zijne kinderen, en zij huppelden hem
     achterna met kreten van blijdschap en zwaaiden jubelend hunne mutsen in de lucht.</p>
-    <hr style="width: 65%;" />
+    <hr style='width: 65%;' >
     <a id="SLOT" name="SLOT"></a>
     <h2>SLOT</h2>
-    <br />
+    <br>
 
     <p>Des anderendaags in den morgen scheen het te Bolderhout kermis te zijn. De
     dorpelingen in hun zondagsgewaad wandelden opgeruimd over de markt en op den grooten
